# i3_widgets_toolbox

./: CMakeLists.txt  README.md
include/: Observer.hpp
lib/config_parser/: CMakeLists.txt
lib/config_parser/include/: ConfigParser.hpp
lib/config_parser/sample/: config_with_whitespaces.txt  main.cpp
lib/config_parser/src/: ConfigParser.cpp
lib/config_parser/tests/: CMakeLists.txt  test_config_parser.cpp  test_config_with_comments.txt
lib/observer/: CMakeLists.txt
lib/observer/include/: ConcreteObserver.hpp  Observer.hpp  Publisher.hpp
lib/observer/sample/: main.cpp
lib/observer/src/: ConcreteObserver.cpp  Observer.cpp  Publisher.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: Utils.hpp
lib/utils/sample/: main.cpp
lib/utils/tests/: CMakeLists.txt  tests_utils.cpp
